frontend/tests/cases/positive/testConstraintSessions.gr
sender : (LChan (Send () End)) [1] -> ()
sender [c] =
      let c  = send c ()
       in close c

receiver : (LChan (Recv () End)) [1] -> ()
receiver [c] =
      let ((), c)  = recv c
       in close c

example : ()
example = receiver (forkNonLinear sender)